--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/She-yh/mypage-backend#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-jwt": "^7.7.5",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   }
 }
